--- a/templates/index.html
+++ b/templates/index.html
@@ -2,7 +2,7 @@
 <!doctype html>
 <html lang="en">
   <head>
-  	<title>CRM</title>
+  	<title>CRM AUTOMATION</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
@@ -16,7 +16,7 @@
 		<div class="card bg-dark text-white">
   <img class="card-img" src="{% static 'img/slider.jpg' %}" alt="Card image" style="width:1800px;height:400px;">
   <div class="card-img-overlay">
-	  <CENTER> <h1><B><class="card-title">CRM</B></h1></CENTER>
+	  <CENTER> <h1><B><class="card-title">CRM AUTOMATION</B></h1></CENTER>
     <p class="card-text"></p>
 
 	  <div class="p-4">
@@ -32,22 +32,14 @@
 									{% else %}
 									<li><a href="accounts/register">REGISTER</a></li>
 									<li><a href="accounts/login">LOGIN</a></li><br>
+
 									{% endif %}
 
-	          <li>
-              <a href="#"><span class="fa fa-sticky-note mr-3"></span> Enquiries</a>
-	          </li>
-	          <li>
-              <a href="#"><span class="fa fa-suitcase mr-3"></span> Batch List</a>
-	          </li>
-	          <li>
-              <a href="#"><span class="fa fa-cogs mr-3"></span> Admissions</a>
-	          </li>
-	          <li>
-              <a href="#"><span class="fa fa-paper-plane mr-3"></span> Contacts</a>
-	          </li><li>
-	              <a href="#"><span class="fa fa-user mr-3"></span> About</a>
-	          </li>
+	          <li><a href="accounts/Enquiry"> Enquiries</a></li>
+	          <li><a href="#"><span class="fa fa-suitcase mr-3"></span> Batch List</a></li>
+	          <li><a href="#"><span class="fa fa-cogs mr-3"></span> Admissions</a></li>
+	          <li><a href="#"><span class="fa fa-paper-plane mr-3"></span> Contacts</a></li>
+               <li><a href="#"><span class="fa fa-user mr-3"></span> About</a></li>
 	        </ul>
 
   </div>
