--- a/templates/registration.html
+++ b/templates/registration.html
@@ -7,9 +7,8 @@
 <body>
 <form action="register" method="post">
     {% csrf_token %}
-    <input type="text" name="username" placeholder="username"><br><br>
-    <input type="text" name="first_name" placeholder="first_name"><br><br>
-    <input type="text" name="last_name" placeholder="last_name"><br><br>
+    <input type="text" name="user_name" placeholder="user_name"><br><br>
+
     <input type="email" name="email" placeholder="email"><br><br>
     <input type="password" name="password1" placeholder="password"><br><br>
     <input type="password" name="password2" placeholder="confirm password"><br><br>
